@@ -90,6 +90,172 @@ as.ts <- function (x)
     else ts(x)
 }
 
+Ops.ts <- function(e1, e2)
+{
+    if(missing(e2)) {
+        ## univariate operator
+        NextMethod(.Generic)
+    } else if(any(nchar(.Method) == 0)) {
+        ## one operand is not a ts
+        NextMethod(.Generic)
+    } else {
+        ## use ts.intersect to align e1 and e2
+        ## <FIXME>
+        ## We currently need to load package `ts' for this ...
+        require(ts)
+        ## </FIXME>
+        nc1 <- NCOL(e1)
+        nc2 <- NCOL(e2)
+        e12 <- ts.intersect(e1, e2)
+        e1 <- if(is.matrix(e1)) e12[, 1:nc1, drop = FALSE] else e12[, 1]
+        e2 <- if(is.matrix(e2)) e12[, nc1 + (1:nc2), drop = FALSE]
+        else e12[, nc1 + 1]
+        NextMethod(.Generic)
+    }
+}
+
+cbind.ts <- function(..., deparse.level = 1) {
+    if(deparse.level != 1) .NotYetUsed("deparse.level != 1")
+
+    ## <FIXME>
+    ## This used to be in package ts, with an interface incompatible
+    ## with the cbind generic prototype.  All we did was change the
+    ## interface providing removed `default' values in the body.
+    dframe <- FALSE
+    union <- TRUE
+    ## </FIXME>
+    
+    names.dots <- function(...)
+    {
+        l <- as.list(substitute(list(...)))[-1]
+        nm <- names(l)
+        fixup <- if (is.null(nm)) seq(along = l) else nm == ""
+        dep <- sapply(l[fixup], function(x) deparse(x)[1])
+        if (is.null(nm)) dep
+        else {
+            nm[fixup] <- dep
+            nm
+        }
+    }
+    sers <- list(...)
+    nulls <- sapply(sers, is.null)
+    sers <- sers[!nulls]
+    nser <- length(sers)
+    if(nser == 0) return(NULL)
+    if(nser == 1)
+        if(dframe) return(as.data.frame(sers[[1]])) else return(sers[[1]])
+    nmsers <- names.dots(...)
+    tsser <-  sapply(sers, function(x) length(tsp(x)) > 0)
+    if(!any(tsser))
+        stop("no time series supplied")
+    sers <- lapply(sers, as.ts)
+    nsers <- sapply(sers, NCOL)
+    tsps <- sapply(sers[tsser], tsp)
+    freq <- mean(tsps[3,])
+    if(max(abs(tsps[3,] - freq)) > getOption("ts.eps")) {
+        stop("Not all series have the same frequency")
+    }
+    if(union) {
+        st <- min(tsps[1,])
+        en <- max(tsps[2,])
+    } else {
+        st <- max(tsps[1,])
+        en <- min(tsps[2,])
+        if(st > en) {
+            warning("Non-intersecting series")
+            return(NULL)
+        }
+    }
+    p <- c(st, en, freq)
+    n <- round(freq * (en - st) + 1)
+    if(any(!tsser)) {
+        ln <- lapply(sers[!tsser], NROW)
+        if(any(ln != 1 && ln != n))
+            stop("non-time series not of the correct length")
+        for(i in (1:nser)[!tsser]) {
+            sers[[i]] <- ts(sers[[i]], start=st, end=en, frequency=freq)
+        }
+        tsps <- sapply(sers, tsp)
+    }
+    if(dframe) {
+        x <- vector("list", nser)
+        names(x) <- nmsers
+    } else {
+        ns <- sum(nsers)
+        x <- matrix(, n, ns)
+        cs <- c(0, cumsum(nsers))
+        nm <- character(ns)
+        for(i in 1:nser)
+            if(nsers[i] > 1) {
+                cn <- colnames(sers[[i]])
+                if(is.null(cn)) cn <- 1:nsers[i]
+                nm[(1+cs[i]):cs[i+1]] <- paste(nmsers[i], cn, sep=".")
+            } else nm[cs[i+1]] <- nmsers[i]
+        dimnames(x) <- list(NULL, nm)
+    }
+    for(i in 1:nser) {
+        if(union) {
+            xx <-
+                if(nsers[i] > 1)
+                    rbind(matrix(NA, round(freq * (tsps[1,i] - st)), nsers[i]),
+                          sers[[i]],
+                          matrix(NA, round(freq * (en - tsps[2,i])), nsers[i]))
+                else
+                    c(rep(NA, round(freq * (tsps[1,i] - st))), sers[[i]],
+                      rep(NA, round(freq * (en - tsps[2,i]))))
+        } else {
+            xx <- window(sers[[i]], st, en)
+        }
+        if(dframe) x[[i]] <- structure(xx, tsp=p, class="ts")
+        else x[, (1+cs[i]):cs[i+1]] <- xx
+    }
+    if(dframe) as.data.frame(x)
+    else ts(x, start=st, freq=freq)
+}
+
+diff.ts <- function (x, lag = 1, differences = 1, ...)
+{
+    if (lag < 1 | differences < 1)
+        stop("Bad value for lag or differences")
+    if (lag * differences >= NROW(x)) return(x[0])
+    r <- x
+    for (i in 1:differences) {
+        r <- r - lag(r, -lag)
+    }
+    xtsp <- attr(x, "tsp")
+    if(is.matrix(x)) colnames(r) <- colnames(x)
+    ts(r, end = xtsp[2], freq = xtsp[3])
+}
+
+na.omit.ts <- function(object, ...)
+{
+    tm <- time(object)
+    xfreq <- frequency(object)
+    ## drop initial and final NAs
+    if(is.matrix(object))
+        good <- which(apply(!is.na(object), 1, all))
+    else  good <- which(!is.na(object))
+    if(!length(good)) stop("all times contain an NA")
+    omit <- integer(0)
+    n <- NROW(object)
+    st <- min(good)
+    if(st > 1) omit <- c(omit, 1:(st-1))
+    en <- max(good)
+    if(en < n) omit <- c(omit, (en+1):n)
+    cl <- class(object)
+    if(length(omit)) {
+        object <- if(is.matrix(object)) object[st:en,] else object[st:en]
+        attr(omit, "class") <- "omit"
+        attr(object, "na.action") <- omit
+        tsp(object) <- c(tm[st], tm[en], xfreq)
+        if(!is.null(cl)) class(object) <- cl
+    }
+    if(any(is.na(object))) stop("time series contains internal NAs")
+    object
+}
+
+is.mts <- function (x) inherits(x, "mts")
+
 start.default <- function(x, ...)
 {
     ts.eps <- getOption("ts.eps")
