@@ -1,6 +1,6 @@
 
 R : Copyright 2001, The R Development Core Team
-Version 1.3.0 Under development (unstable) (2001-05-24)
+Version 1.4.0 Under development (unstable) (2001-08-06)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -88,7 +88,7 @@ TempHigh:SoftSoft           -0.30442    0.22238  -1.369  0.17102
 M.userY:TempHigh:SoftMedium  0.21189    0.31569   0.671  0.50209    
 M.userY:TempHigh:SoftSoft   -0.20387    0.32536  -0.627  0.53092    
 ---
-Signif. codes:  0  `***'  0.001  `**'  0.01  `*'  0.05  `.'  0.1  ` '  1 
+Signif. codes:  0 `***' 0.001 `**' 0.01 `*' 0.05 `.' 0.1 ` ' 1 
 
 (Dispersion parameter for poisson family taken to be 1)
 
@@ -132,7 +132,7 @@ M.userY:BrandM               0.40757    0.15961   2.554   0.0107 *
 TempHigh:BrandM              0.04411    0.18463   0.239   0.8112    
 M.userY:TempHigh:BrandM      0.44427    0.26673   1.666   0.0958 .  
 ---
-Signif. codes:  0  `***'  0.001  `**'  0.01  `*'  0.05  `.'  0.1  ` '  1 
+Signif. codes:  0 `***' 0.001 `**' 0.01 `*' 0.05 `.' 0.1 ` ' 1 
 
 (Dispersion parameter for poisson family taken to be 1)
 
@@ -179,7 +179,7 @@ M.userY:BrandM                                  , 1
 TempHigh:BrandM                                 . .     1            
 M.userY:TempHigh:BrandM                         . .     ,    1       
 attr(,"legend")
-[1] 0  ` '  0.3  `.'  0.6  `,'  0.8  `+'  0.9  `*'  0.95  `B'  1
+[1] 0 ` ' 0.3 `.' 0.6 `,' 0.8 `+' 0.9 `*' 0.95 `B' 1
 
 > anova(detg.m0, detg.mod)
 Analysis of Deviance Table
@@ -1092,9 +1092,9 @@ flld.c> filled.contour(x = 1:20, y = 1:20, z = b, plot.axes = {
     "\nNumber of builtin functions:\t", sum(base.is.f), "\n\t starting with 'is.' :\t ", 
     length(is.bi <- bi[substring(bi, 1, 3) == "is."]), "\n")
 
-Number of base objects:		 1393 
-Number of builtin functions:	 1361 
-	 starting with 'is.' :	  41 
+Number of base objects:		 1431 
+Number of builtin functions:	 1399 
+	 starting with 'is.' :	  42 
 
 > is.primitive <- function(obj) is.function(obj) && 
     is.null(args(obj))
@@ -1139,6 +1139,7 @@ is.language    : .
 is.list        : . 
 is.logical     : . 
 is.matrix      : . 
+is.mts         : . 
 is.na          : NA 
 is.name        : . 
 is.nan         : () 
@@ -1193,6 +1194,7 @@ is.language    : .
 is.list        : . 
 is.logical     : . 
 is.matrix      : . 
+is.mts         : . 
 is.na          : . . . . . 
 is.name        : . 
 is.nan         : . . . . . 
@@ -1229,6 +1231,7 @@ is.language    : .
 is.list        : . 
 is.logical     : . 
 is.matrix      : . 
+is.mts         : . 
 is.na          : . . . . . . . . . . . . . . . . . . . . . . . . 
 is.name        : . 
 is.nan         : . . . . . . . . . . . . . . . . . . . . . . . . 
@@ -1265,6 +1268,7 @@ is.language    : .
 is.list        : . 
 is.logical     : . 
 is.matrix      : . 
+is.mts         : . 
 is.na          : . 
 is.name        : . 
 is.nan         : . 
@@ -1303,6 +1307,7 @@ is.language    : |
 is.list        : . 
 is.logical     : . 
 is.matrix      : . 
+is.mts         : . 
 is.na          : . 
 is.name        : . 
 is.nan         : . 
@@ -1343,6 +1348,7 @@ is.language    : |
 is.list        : . 
 is.logical     : . 
 is.matrix      : . 
+is.mts         : . 
 is.na          : NA 
 is.name        : . 
 is.nan         : . . . 
@@ -1387,12 +1393,14 @@ logical(0)
          FALSE           TRUE          FALSE          FALSE          FALSE 
    is.function     is.integer    is.language        is.list     is.logical 
          FALSE          FALSE          FALSE          FALSE          FALSE 
-     is.matrix        is.name        is.null     is.numeric      is.object 
-         FALSE          FALSE          FALSE           TRUE          FALSE 
-    is.ordered    is.pairlist          is.qr        is.real   is.recursive 
-         FALSE          FALSE          FALSE           TRUE          FALSE 
-     is.symbol       is.table          is.ts    is.unsorted      is.vector 
+     is.matrix         is.mts        is.name        is.null     is.numeric 
          FALSE          FALSE          FALSE          FALSE           TRUE 
+     is.object     is.ordered    is.pairlist          is.qr        is.real 
+         FALSE          FALSE          FALSE          FALSE           TRUE 
+  is.recursive      is.symbol       is.table          is.ts    is.unsorted 
+         FALSE          FALSE          FALSE          FALSE          FALSE 
+     is.vector 
+          TRUE 
 
 > ispi <- unlist(is.ALL(pi))
 
@@ -1427,6 +1435,7 @@ is.language    : .
 is.list        : . 
 is.logical     : . 
 is.matrix      : . 
+is.mts         : . 
 is.na          : . . . . . . . 
 is.name        : . 
 is.nan         : . . . . . . . 
@@ -1473,6 +1482,7 @@ is.language    : .
 is.list        : | 
 is.logical     : . 
 is.matrix      : . 
+is.mts         : . 
 is.na          : . . . . . . . . . . . . 
 is.name        : . 
 is.nan         : . . . . . . . . . . . . 
@@ -1509,6 +1519,7 @@ is.language    : .
 is.list        : . 
 is.logical     : . 
 is.matrix      : . 
+is.mts         : . 
 is.na          : . . . . . . . 
 is.name        : . 
 is.nan         : . . . . . . . 
@@ -1737,5 +1748,5 @@ sm     3    3    3    3    4    4    4    4    2     2     2
 > par(op)
 > 
 > cat("Time elapsed: ", proc.time() - .ptime, "\n")
-Time elapsed:  8.71 0.12 8.94 0 0 
+Time elapsed:  7.12 0.12 7.35 0 0 
 > 
